Reference to hmsv2api

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>Documentation</head>
 
 <ul>
-    <li><a href="hclient/apidocs/index.html">HMS Tools API</a>/li>
+    <li><a href="hclient/apidocs/index.html">HMS Tools API</a></li>
+    <li>
+        <a href="hmsv2api/doc/index.html">Hive Metadata API v2</a>
+    </li>
 </ul>
 
 </html>
