Added hclient as submodule

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 
-<head>Documentation</head>
+<head>Public pages for Alex Kolbasov</head>
 
+<h1>Various documentation</h1>
 <ul>
-    <li><a href="hclient/apidocs/index.html">HMS Tools API</a></li>
+    <li>
+        <a href="hclient/tools-common/src/apidocs/index.html">HMS Tools API</a></li>
     <li>
         <a href="hmsv2api/doc/index.html">Hive Metadata API v2</a>
     </li>
